<resources>
    <string name="app_name">test</string>

    <!--Custom string for underlined text on home page-->
    <string name="SignUpUnderline">
        <u>Sign up</u>
    </string>

    <!--Custom string for underlined text on login page-->
    <string name="ForgotPassword">
        <u>Forgot Password?</u>
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBWL4qwmL_44-8UFds3yZqQH5IWk_OnCUw</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="gmail_com">**********@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">*****************</string>
    <string name="passwordText">Password</string>
    <string name="logo">Logo</string>
    <string name="remember_me">Remember Me</string>
    <string name="uncc_event_finder">UNCC Event Finder</string>
    <string name="login">LOGIN</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_email">Login with Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="startext">******</string>
    <string name="back_button">Back Button</string>
    <string name="name">name</string>
    <string name="sign_out">Sign out</string>
    <string name="text_fill">text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill \ntext fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill text fill</string>
    <string name="event_image">Event Image</string>
    <string name="menu_navigation_button">Menu Navigation Button</string>
    <string name="map_navigation_button">Map Navigation Button</string>
    <string name="event_details">Event Details</string>
    <string name="i_m_interested">I\'m interested</string>
    <string name="navigate_to">Navigate To</string>
    <string name="event_category">Event Category</string>
    <string name="event_description">Event Description</string>
    <string name="settings">Settings</string>
    <string name="allow_friends_to_events">Allow Friends to see Your Signed Up Events</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="save">Save</string>
    <string name="default_web_client_id">152589945463-clfuq4hdvpuqoreialvsrntlfritc23h.apps.googleusercontent.com</string>

</resources>