<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleActivity">

    <!--Top view that says "Sign Up"-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/color_primary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_with_google"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:drawablePadding="20dp"
            android:translationX="75dp"
            app:drawableStartCompat="@drawable/googleicon" />

    </LinearLayout>

    <!--Back button-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:background="@drawable/back_arrow"
        android:translationY="15dp"
        android:contentDescription="@string/back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="34sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name"
        android:textSize="24sp"/>

    <!--Log In Button-->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:layout_marginBottom="115dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signout"
        android:text="@string/sign_out"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>