<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrivacySettingsActivity">

    <!-- Green Banner -->
    <RelativeLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_primary"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Menu and Map Icons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Menu Button -->
            <ImageView
                android:id="@+id/menuButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_menu_24"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/menu_navigation_button" />

            <!-- Navigation Button -->
            <ImageView
                android:id="@+id/mapIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_map_24"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/map_navigation_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- Checkboxes for Privacy Settings -->

    <!-- Show Events to public -->
    <CheckBox
        android:id="@+id/checkBoxEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/allow_friends_to_events"/>

<!--    &lt;!&ndash; Receive Notifications &ndash;&gt;
    <CheckBox
        android:id="@+id/checkBoxReceiveNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Receive Notifications" />

    &lt;!&ndash; Share Location &ndash;&gt;
    <CheckBox
        android:id="@+id/checkBoxShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Share Location"/>

    &lt;!&ndash; Show Online Status &ndash;&gt;
    <CheckBox
        android:id="@+id/checkBoxShowOnlineStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Show Online Status" />-->

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>