<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <!-- Green Banner -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls">

        <RelativeLayout
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/color_primary"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Menu and Map Icons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- Menu Button -->
                <ImageView
                    android:id="@+id/menuButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/menu_navigation_button"
                    android:src="@drawable/baseline_menu_24" />

                <!-- Navigation Button -->
                <ImageView
                    android:id="@+id/mapIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/map_navigation_button"
                    android:src="@drawable/baseline_map_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/event_details"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eventLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailTitle"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailLocation"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/detailAddress"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/event_image" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/interestButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/i_m_interested"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/navigationButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/navigate_to"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/reportButton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#00FFFFFF"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/baseline_report_problem_24" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/sessionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/layout_border"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/timeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/calendarIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:textStyle="bold"
                            app:drawableLeftCompat="@drawable/calendar" />

                        <TextView
                            android:id="@+id/eventStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text=" - "
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventEndDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Session List Horizontal RecyclerView -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/layout_border"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/event_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/event_category"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/categoryButtonsLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="horizontal"
                            android:textSize="11sp" />
                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/event_audience"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="Audience"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/audienceButtonsLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="horizontal"
                            android:textSize="11sp" />
                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="4dp"
                        android:text="@string/event_description"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/eventdescriptiontext"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/layout_border"
                        android:padding="8dp"
                        android:paddingTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ShareButtonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="VisualLintBounds">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/shareButton"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="Share"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/event_friends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_border"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="Currently, _ people are interested this event!"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_friend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="_ friends are attending this event"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_interested"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="_ friends are interested in this event"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
